# hello-hexlet-world

./: pyproject.toml
hexlet_hello_world/: __init__.py  module.py
hexlet_hello_world/scripts/: main.py
