[project]
name = "hexlet-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_hello_world"]

[project.scripts]
my_app = "hexlet_hello_world.scripts.main:main"
